✨ Add user and acronym api

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+### Vapor ###
+Config/secrets
+
+### Vapor Patch ###
 Packages
 .build
 xcuserdata
 *.xcodeproj
 DerivedData/
 .DS_Store
-db.sqlite
 .swiftpm
-
